--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,41 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <hr />
+    <table id="users-list">
+        <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>age</th>
+        </tr>
+        {{ range.Users }} 
+            {{ block "users-list-element" .}}
+                <tr>   
+                    <td>{{ .Id }}</td>
+                    <td>{{ .Name }}</td>
+                    <td>{{ .Age }}</td>
+                </tr>
+            {{ end  }}
+        {{ end }}
+    </table>
+    
+    <hr />
+    
+    <h1>Add User</h1>
+    <form
+      hx-post="/add-user/"
+      hx-target="#users-list"
+      hx-swap="beforeend"
+      hx-indicator="#add-user-loader"
+    >
+      <input type="text" name="user-name" id="user-name">
+      <input type="number" min="0" max="300" name="user-age" id="user-age">
+
+      <button type="submit">
+        Add
+      </button>
+      <span id="add-user-loader" class="htmx-indicator">Adding todo...</span>
+    </form>
+
 </body>
 </html>
